--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,19 @@
 !/tmp/storage/.keep
 
 /public/assets
+.byebug_history
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+
+# JavaScript and Yarn files
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+# OS generated files
+.DS_Store
