ダウングレード

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,22 +1,29 @@
 default: &default
+  adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: root
+  password:
+  socket: /tmp/mysql.sock
 
 development:
-  <<: *default
   adapter: mysql2
+  encoding: utf8
+  pool: 5
   username: root
   password:
   host: localhost
   database: furima-47310_development
 
 test:
-  <<: *default
   adapter: mysql2
+  encoding: utf8
+  pool: 10
   username: root
   password:
   host: localhost
   database: furima-47310_test
+  prepared_statements: false
 
 production:
   <<: *default
